--- a/_posts/0000-01-02-tesis1093.md
+++ b/_posts/0000-01-02-tesis1093.md
@@ -3,4 +3,4 @@ layout: slide
 title: "Welcome to our second slide! su madre"
 ---
 your text
-use the left arrow to go back!
+aqui ando modificando porque ando cagando
